--- a/assets/config.yml
+++ b/assets/config.yml
@@ -2,7 +2,7 @@
 
 # Optional: Use external configuration file.
 # Using this will ignore remaining config in this file
-# externalConfig: https://example.com/server-luci/config.yaml
+# externalConfig: https://raw.githubusercontent.com/florib779/homer-config/main/assets/config.yml
 
 columns: "auto" # auto
 
@@ -105,19 +105,35 @@ services:
   - name: "Sonos"
     items:
       - name: "Options"
-        url: "http://192.168.178.62:1400/status"
+        url: "http://192.168.178.62:1400/status/"
         target: "_blank"
       - name: "Scan Results"
-        url: "http://192.168.178.62:1400/status/scanresults"
+        url: "http://192.168.178.62:1400/status/scanresults/"
         target: "_blank"
       - name: "Review"
-        url: "http://192.168.178.62:1400/support/review"
+        url: "http://192.168.178.62:1400/support/review/"
         target: "_blank"
-  - name: "DietPi"
+  - name: "Musik-Download"
+    # https://github.com/florib779/Roon/blob/master/articles/sources-for-downloadable-audio-files.md
+    items:
+      - name: "Qobuz"
+        url: "https://qobuz.com/"
+        target: "_blank"
+      - name: "Bandcamp"
+        url: "https://bandcamp.com/"
+        target: "_blank"
+      - name: "7digital"
+        url: "https://de.7digital.com/"
+        target: "_blank"
+      - name: "HIGHRESAUDIO"
+        url: "https://www.highresaudio.com/"
+        target: "_blank"
+      - name: "Burning Shed"
+        url: "https://burningshed.com/"
+        target: "_blank"
+  - name: "DietPi-Commands"
+    # https://daz-dj.uk/viewtopic.php?t=27
     items:
       - name: "dietpi-launcher"
-      - name: "All DietPi commands"
-        url: "https://daz-dj.uk/viewtopic.php?t=27"
-        target: "_blank"
 
-footer: '<p><a href="https://dietpi.com/" target="_blank">DietPi</a> - <a href="https://roonlabs.com/" target="_blank">Roon</a> - <a href="https://sonos.com/" target="_blank">Sonos</a> - <a href="https://github.com/bastienwirtz/homer" target="_blank">Homer</a></p>'
+footer: '<p><a href="https://avm.de/" target="_blank">AVM</a> - <a href="https://dietpi.com/" target="_blank">DietPi</a> - <a href="https://roonlabs.com/" target="_blank">Roon</a> - <a href="https://sonos.com/" target="_blank">Sonos</a> - <a href="https://github.com/bastienwirtz/homer" target="_blank">Homer</a></p>'
