--- a/assets/config.yml
+++ b/assets/config.yml
@@ -1,5 +1,7 @@
 ---
 
+# https://github.com/NX211/homer-icons
+
 # Optional: Use external configuration file.
 # Using this will ignore remaining config in this file
 # externalConfig: https://raw.githubusercontent.com/florib779/homer-config/main/assets/config.yml
@@ -103,16 +105,65 @@ services:
         url: "http://raspi/"
         target: "_blank"
   - name: "Sonos"
+    # https://github.com/florib779/Roon/blob/master/articles/roon-sonos.md
+    # ToDo: Test links
     items:
-      - name: "Options"
+      - name: "Advconfig"
+        subtitle: "Set the root bridge (FirstZP and Priority to enabled)."
+        url: "http://192.168.178.62:1400/advconfig.htm"
+        target: "_blank"
+      - name: "Device description"
+        url: "http://192.168.178.62:1400/xml/device_description.xml"
+        target: "_blank"
+      - name: "Reboot"
+        subtitle: "Reboot the Sonos box."
+        url: "http://192.168.178.62/reboot/"
+        target: "_blank"
+      - name: "Region"
+        subtitle: "Set WLAN region (for Europe)."
+        url: "http://192.168.178.62/region.htm"
+        target: "_blank"
+      - name: "Status"
         url: "http://192.168.178.62:1400/status/"
         target: "_blank"
-      - name: "Scan Results"
-        url: "http://192.168.178.62:1400/status/scanresults/"
+      - name: "Ifconfig"
+        url: "http://192.168.178.62:1400/status/ifconfig/"
+        target: "_blank"
+      #- name: "Perf"
+      #  url: "http://192.168.178.62:1400/status/perf/"
+      #  target: "_blank"
+      #- name: "Scanresults"
+      #  subtitle: "Scanresults shows you all WLAN connections that were reached by Sonos."
+      #  url: "http://192.168.178.62:1400/status/scanresults/"
+      #  target: "_blank"
+      #- name: "Topology"
+      #  subtitle: "Shows the Sonos topology with all Sonos players and media servers."
+      #  url: "http://192.168.178.62:1400/status/topology/"
+      #  target: "_blank"
+      #- name: "Tracks Summary"
+      #  subtitle: "With this command you can display the number of tracks."
+      #  url: "http://192.168.178.62:1400/status/tracks_summary/"
+      #  target: "_blank"
+      - name: "Direct Submit"
+        subtitle: "This submits a diagnostic and then returns the code in a web page."
+        url: "http://192.168.178.62:1400//support/directsubmit/"
         target: "_blank"
       - name: "Review"
+        subtitle: "Overview of the Sonos Box. The network matrix can also be called up here."
         url: "http://192.168.178.62:1400/support/review/"
         target: "_blank"
+      - name: "Tools"
+        subtitle: "Network tools like ping, traceroute, nslookup."
+        url: "http://192.168.178.62:1400/tools.htm"
+        target: "_blank"
+      #- name: "WiFi Off until next reboot"
+      #  subtitle: "Turns off the WIFI until the next reboot."
+      #  url: "http://192.168.178.62:1400/wifictrl?wifi=off"
+      #  target: "_blank"
+      #- name: "WiFi Off persistant"
+      #  subtitle: "Turns off the WIFI interface completely. If you only want to work with network cable."
+      #  url: "http://192.168.178.62:1400/wifictrl?wifi=persist-off"
+      #  target: "_blank"
   - name: "Musik-Download"
     # https://github.com/florib779/Roon/blob/master/articles/sources-for-downloadable-audio-files.md
     items:
