--- a/assets/config.yml
+++ b/assets/config.yml
@@ -183,8 +183,42 @@ services:
         url: "https://burningshed.com/"
         target: "_blank"
   - name: "DietPi-Commands"
-    # https://daz-dj.uk/viewtopic.php?t=27
     items:
+      - name: "dietpi-autostart"
+        subtitle: "Choose which program/script is automatically run during boot."
+      - name: "dietpi-backup"
+        subtitle: "Backup or restore your DietPi system."
+      - name: "dietpi-bugreport"
+        subtitle: "Sends a bug report to DietPi."
+      - name: "dietpi-cleaner"
+        subtitle: "Remove unwanted junk from your DietPi system and free up filesystem space."
+      - name: "dietpi-config"
+        subtitle: "Feature rich configuration tool for your device."
+      - name: "dietpi-cron"
+        subtitle: "Allows you to modify all start times for Cron Jobs."
+      - name: "dietpi-drive_manager"
+        subtitle: "Feature-rich drive management utility."
+      - name: "dietpi-explorer"
+        subtitle: "Lightweight whiptail based file manager/explorer."
+      #- name: "dietpi-justboom"
+      #  subtitle: "Frontend for changing audio settings, eg: EQ, MPD, CAVA."
       - name: "dietpi-launcher"
+        subtitle: "Select and Run any of the DietPi programs, all from one place."
+      #- name: "dietpi-letsencrypt"
+      #  subtitle: "Frontend for Lets Encrypt and DietPi integration."
+      - name: "dietpi-logclear"
+        subtitle: "Keep ontop of your log files, features clearing and backup modes."
+      #- name: "dietpi-morsecode"
+      #  subtitle: "Converts a text file to morse code, then outputs to your screen."
+      - name: "dietpi-process_tool"
+        subtitle: "Tweak system wide nice/priority levels, for most software and processes."
+      - name: "dietpi-services"
+        subtitle: "Takes control of software services, enabling DietPi a method of quick service control."
+      - name: "dietpi-software"
+        subtitle: "Install optimized and ready to run software."
+      - name: "dietpi-sync"
+        subtitle: "Allows you to sync/duplicate one directory to another."
+      - name: "dietpi-update"
+        subtitle: "Update your version of DietPi."
 
 footer: '<p><a href="https://avm.de/" target="_blank">AVM</a> - <a href="https://dietpi.com/" target="_blank">DietPi</a> - <a href="https://roonlabs.com/" target="_blank">Roon</a> - <a href="https://sonos.com/" target="_blank">Sonos</a> - <a href="https://github.com/bastienwirtz/homer" target="_blank">Homer</a></p>'
