--- a/assets/config.yml
+++ b/assets/config.yml
@@ -184,43 +184,77 @@ services:
         target: "_blank"
   - name: "DietPi-Commands"
     items:
-      - #name: "dietpi-autostart"
+      - name: "dietpi-autostart"
         clipboard: "dietpi-autostart"
         type: "CopyToClipboard"
         subtitle: "Choose which program/script is automatically run during boot."
       - name: "dietpi-backup"
+        clipboard: "dietpi-backup"
+        type: "CopyToClipboard"
         subtitle: "Backup or restore your DietPi system."
       - name: "dietpi-bugreport"
+        clipboard: "dietpi-bugreport"
+        type: "CopyToClipboard"
         subtitle: "Sends a bug report to DietPi."
       - name: "dietpi-cleaner"
+        clipboard: "dietpi-cleaner"
+        type: "CopyToClipboard"
         subtitle: "Remove unwanted junk from your DietPi system and free up filesystem space."
       - name: "dietpi-config"
+        clipboard: "dietpi-config"
+        type: "CopyToClipboard"
         subtitle: "Feature rich configuration tool for your device."
       - name: "dietpi-cron"
+        clipboard: "dietpi-cron"
+        type: "CopyToClipboard"
         subtitle: "Allows you to modify all start times for Cron Jobs."
       - name: "dietpi-drive_manager"
+        clipboard: "dietpi-drive_manager"
+        type: "CopyToClipboard"
         subtitle: "Feature-rich drive management utility."
       - name: "dietpi-explorer"
+        clipboard: "dietpi-explorer"
+        type: "CopyToClipboard"
         subtitle: "Lightweight whiptail based file manager/explorer."
       #- name: "dietpi-justboom"
+      #  clipboard: "justboom"
+      #  type: "CopyToClipboard"
       #  subtitle: "Frontend for changing audio settings, eg: EQ, MPD, CAVA."
       - name: "dietpi-launcher"
+        clipboard: "dietpi-launcher"
+        type: "CopyToClipboard"
         subtitle: "Select and Run any of the DietPi programs, all from one place."
       #- name: "dietpi-letsencrypt"
+      #  clipboard: "dietpi-letsencrypt"
+      #  type: "CopyToClipboard"
       #  subtitle: "Frontend for Lets Encrypt and DietPi integration."
       - name: "dietpi-logclear"
+        clipboard: "dietpi-logclear"
+        type: "CopyToClipboard"
         subtitle: "Keep ontop of your log files, features clearing and backup modes."
       #- name: "dietpi-morsecode"
+      #  clipboard: "dietpi-morsecode"
+      #  type: "CopyToClipboard"
       #  subtitle: "Converts a text file to morse code, then outputs to your screen."
       - name: "dietpi-process_tool"
+        clipboard: "dietpi-process_tool"
+        type: "CopyToClipboard"
         subtitle: "Tweak system wide nice/priority levels, for most software and processes."
       - name: "dietpi-services"
+        clipboard: "dietpi-services"
+        type: "CopyToClipboard"
         subtitle: "Takes control of software services, enabling DietPi a method of quick service control."
       - name: "dietpi-software"
+        clipboard: "dietpi-software"
+        type: "CopyToClipboard"
         subtitle: "Install optimized and ready to run software."
       - name: "dietpi-sync"
+        clipboard: "dietpi-sync"
+        type: "CopyToClipboard"
         subtitle: "Allows you to sync/duplicate one directory to another."
       - name: "dietpi-update"
+        clipboard: "dietpi-update"
+        type: "CopyToClipboard"
         subtitle: "Update your version of DietPi."
 
 footer: '<p><a href="https://avm.de/" target="_blank">AVM</a> - <a href="https://dietpi.com/" target="_blank">DietPi</a> - <a href="https://roonlabs.com/" target="_blank">Roon</a> - <a href="https://sonos.com/" target="_blank">Sonos</a> - <a href="https://github.com/bastienwirtz/homer" target="_blank">Homer</a></p>'
