--- a/assets/config.yml
+++ b/assets/config.yml
@@ -22,8 +22,7 @@ links:
   - icon: "far fa-newspaper"
     url: "https://news.google.com/"
     target: "_blank"
-  - icon: "https://raw.githubusercontent.com/NX211/homer-icons/master/png/google-mail.png"
-    #icon: "fas fa-envelope"
+  - icon: "fas fa-envelope"
     url: "https://mail.google.com/"
     target: "_blank"
   - icon: "fas fa-calendar-alt"
