--- a/assets/config.yml
+++ b/assets/config.yml
@@ -267,8 +267,8 @@ services:
         clipboard: "docker exec -it beets bash"
         type: "CopyToClipboard"
         subtitle: "Get access to Beets Dropbox Konsole"
-      - name: "beet import /mnt/external/music-incoming/*"
-        clipboard: "beet import /mnt/external/music-incoming/"
+      - name: "beet import /mnt/downloads/*"
+        clipboard: "beet import /mnt/downloads/"
         type: "CopyToClipboard"
         subtitle: "Import music files with Beets"
       - name: "rclone copy -P /mnt/music Dropbox:Backups/Music/music -v --log-file=rclone.log"
