--- a/assets/config.yml
+++ b/assets/config.yml
@@ -14,25 +14,25 @@ header: false
 
 links:
   - icon: "fab fa-dropbox"
-    url: "https://www.dropbox.com/"
+    url: "https://www.dropbox.com"
     target: "_blank"
   - icon: "fas fa-sticky-note"
-    url: "https://paper.dropbox.com/"
+    url: "https://paper.dropbox.com"
     target: "_blank"
   - icon: "far fa-newspaper"
     url: "https://news.google.com/foryou"
     target: "_blank"
   - icon: "fas fa-envelope"
-    url: "https://mail.google.com/"
+    url: "https://mail.google.com"
     target: "_blank"
   - icon: "fas fa-calendar-alt"
-    url: "https://calendar.google.com/"
+    url: "https://calendar.google.com"
     target: "_blank"
   - icon: "fas fa-address-card"
-    url: "https://contacts.google.com/"
+    url: "https://contacts.google.com"
     target: "_blank"
   - icon: "fas fa-tv"
-    url: "http://server:9330/display/"
+    url: "http://server:9330/display"
     target: "_blank"
 
 services:
@@ -40,41 +40,41 @@ services:
     #logo: "assets/tools/roon.png"
     items:
       - name: "Community"
-        url: "https://community.roonlabs.com/"
+        url: "https://community.roonlabs.com"
         target: "_blank"
       - name: "Valence"
-        url: "https://valence.roonlabs.net/artdirector/"
+        url: "https://valence.roonlabs.net/artdirector"
         target: "_blank"
       - name: "Translations"
         subtitle: "German"
         url: "https://translations.roonlabs.net/lang/german/all"
         target: "_blank"
       - name: "Localizely"
-        url: "https://app.localizely.com/"
+        url: "https://app.localizely.com"
         target: "_blank"
       - name: "Deepl"
-        url: "https://deepl.com/"
+        url: "https://deepl.com"
         target: "_blank"
       - name: "Google-Translate"
-        url: "https://translate.google.com/"
+        url: "https://translate.google.com"
         target: "_blank"
   - name: "Server"
     items:
       - name: "Dashboard"
         subtitle: "DietPi"
-        url: "http://server:5252/"
+        url: "http://server:5252"
         target: "_blank"
       - name: "Songkong"
-        url: "http://server:4567/"
+        url: "http://server:4567"
         target: "_blank"
       - name: "Beets"
-        url: "http://server:8337/"
+        url: "http://server:8337"
         target: "_blank"
       - name: "Macro.on"
-        url: "http://server:8180/"
+        url: "http://server:8180"
         target: "_blank"
       - name: "Portainer"
-        url: "http://server:9002/"
+        url: "http://server:9002"
         type: "Portainer"
         apikey: "<---insert-api-key-here--->"
         target: "_blank"
@@ -83,13 +83,16 @@ services:
     items:
       - name: "Fritz!Box"
         subtitle: "FRITZ!OS"
-        url: "https://fritz.box/"
+        url: "https://fritz.box"
         target: "_blank"
       - name: "MyFRITZ!"
-        url: "https://fritz.box/myfritz/"
+        url: "https://fritz.box/myfritz"
         target: "_blank"
       - name: "FRITZ!NAS"
-        url: "https://fritz.box/nas/"
+        url: "https://fritz.box/nas"
+        target: "_blank"
+      - name: "FRITZ!Smart Gateway"
+        url: "http://fritz.smartgateway"
         target: "_blank"
       - name: "Notfall-IP"
         url: "https://169.254.1.1"
@@ -98,7 +101,7 @@ services:
     items:
       - name: "Dashboard"
         subtitle: "DietPi"
-        url: "http://kiosk:5252/"
+        url: "http://kiosk:5252"
         target: "_blank"
   - name: "Raspi"
     #logo: "assets/tools/raspberry.png"
@@ -120,40 +123,40 @@ services:
         target: "_blank"
       - name: "Reboot"
         subtitle: "Reboot the Sonos box."
-        url: "http://192.168.178.62/reboot/"
+        url: "http://192.168.178.62/reboot"
         target: "_blank"
       #- name: "Region"
       #  subtitle: "Set WLAN region (for Europe)."
       #  url: "http://192.168.178.62/region.htm"
       #  target: "_blank"
       - name: "Status"
-        url: "http://192.168.178.62:1400/status/"
+        url: "http://192.168.178.62:1400/status"
         target: "_blank"
       - name: "Ifconfig"
-        url: "http://192.168.178.62:1400/status/ifconfig/"
+        url: "http://192.168.178.62:1400/status/ifconfig"
         target: "_blank"
       #- name: "Perf"
-      #  url: "http://192.168.178.62:1400/status/perf/"
+      #  url: "http://192.168.178.62:1400/status/perf"
       #  target: "_blank"
       #- name: "Scanresults"
       #  subtitle: "Scanresults shows you all WLAN connections that were reached by Sonos."
-      #  url: "http://192.168.178.62:1400/status/scanresults/"
+      #  url: "http://192.168.178.62:1400/status/scanresults"
       #  target: "_blank"
       #- name: "Topology"
       #  subtitle: "Shows the Sonos topology with all Sonos players and media servers."
-      #  url: "http://192.168.178.62:1400/status/topology/"
+      #  url: "http://192.168.178.62:1400/status/topology"
       #  target: "_blank"
       #- name: "Tracks Summary"
       #  subtitle: "With this command you can display the number of tracks."
-      #  url: "http://192.168.178.62:1400/status/tracks_summary/"
+      #  url: "http://192.168.178.62:1400/status/tracks_summary"
       #  target: "_blank"
       - name: "Direct Submit"
         subtitle: "This submits a diagnostic and then returns the code in a web page."
-        url: "http://192.168.178.62:1400//support/directsubmit/"
+        url: "http://192.168.178.62:1400//support/directsubmit"
         target: "_blank"
       - name: "Review"
         subtitle: "Overview of the Sonos Box. The network matrix can also be called up here."
-        url: "http://192.168.178.62:1400/support/review/"
+        url: "http://192.168.178.62:1400/support/review"
         target: "_blank"
       - name: "Tools"
         subtitle: "Network tools like ping, traceroute, nslookup."
@@ -174,19 +177,19 @@ services:
         url: "https://www.qobuz.com/de-de/shop"
         target: "_blank"
       - name: "Bandcamp"
-        url: "https://bandcamp.com/"
+        url: "https://bandcamp.com"
         target: "_blank"
       - name: "7digital"
-        url: "https://de.7digital.com/"
+        url: "https://de.7digital.com"
         target: "_blank"
       - name: "HIGHRESAUDIO"
         url: "https://www.highresaudio.com/de/site/index"
         target: "_blank"
       - name: "Burning Shed"
-        url: "https://burningshed.com/"
+        url: "https://burningshed.com"
         target: "_blank"
   - name: "DietPi-Commands"
-    # https://dietpi.com/docs/dietpi_tools/
+    # https://dietpi.com/docs/dietpi_tools
     items:
       - name: "dietpi-autostart"
         clipboard: "dietpi-autostart"
@@ -279,4 +282,4 @@ services:
         type: "CopyToClipboard"
         subtitle: "Copy local music files to Dropbox"
 
-footer: '<p><a href="https://avm.de/" target="_blank">AVM</a> - <a href="https://dietpi.com/" target="_blank">DietPi</a> - <a href="https://roonlabs.com/" target="_blank">Roon</a> - <a href="https://sonos.com/" target="_blank">Sonos</a> - <a href="https://github.com/" target="_blank">GitHub</a> - <a href="https://github.com/bastienwirtz/homer" target="_blank">Homer</a></p>'
+footer: '<p><a href="https://avm.de" target="_blank">AVM</a> - <a href="https://dietpi.com" target="_blank">DietPi</a> - <a href="https://roonlabs.com" target="_blank">Roon</a> - <a href="https://sonos.com" target="_blank">Sonos</a> - <a href="https://github.com" target="_blank">GitHub</a> - <a href="https://github.com/bastienwirtz/homer" target="_blank">Homer</a></p>'
