--- a/assets/config.yml
+++ b/assets/config.yml
@@ -15,48 +15,66 @@ header: false
 links:
   - icon: "fab fa-dropbox"
     url: "https://www.dropbox.com"
+    target: "_blank"
   - icon: "fas fa-sticky-note"
     url: "https://paper.dropbox.com"
+    target: "_blank"
   - icon: "far fa-newspaper"
     url: "https://news.google.com/foryou"
+    target: "_blank"
   - icon: "fas fa-envelope"
     url: "https://mail.google.com"
+    target: "_blank"
   - icon: "fas fa-calendar-alt"
     url: "https://calendar.google.com"
+    target: "_blank"
   - icon: "fas fa-address-card"
     url: "https://contacts.google.com"
+    target: "_blank"
   - icon: "fas fa-tv"
     url: "http://server:9330/display"
+    target: "_blank"
 
 services:
   - name: "Roon"
     items:
       - name: "Community"
         url: "https://community.roonlabs.com"
+        target: "_blank"
       - name: "Valence"
         url: "https://valence.roonlabs.net/artdirector"
+        target: "_blank"
       - name: "Translations"
         subtitle: "German"
         url: "https://translations.roonlabs.net/lang/german/all"
+        target: "_blank"
       - name: "Localizely"
         url: "https://app.localizely.com"
+        target: "_blank"
       - name: "Deepl"
         url: "https://deepl.com"
+        target: "_blank"
       - name: "Google-Translate"
         url: "https://translate.google.com"
+        target: "_blank"
   - name: "Server"
     items:
       - name: "Dashboard"
         subtitle: "DietPi"
         url: "http://server:5252"
+        target: "_blank"
       - name: "Songkong"
         url: "http://server:4567"
+        target: "_blank"
       - name: "Beets"
         url: "http://server:8337"
+        target: "_blank"
       - name: "Macro.on"
         url: "http://server:8180"
+        target: "_blank"
       - name: "Portainer"
         url: "http://server:9002"
+        target: "_blank"
         type: "Portainer"
         apikey: "<---insert-api-key-here--->"
   - name: "Fritz!Box"
@@ -64,26 +82,34 @@ services:
       - name: "Fritz!Box"
         subtitle: "FRITZ!OS"
         url: "https://fritz.box"
+        target: "_blank"
       - name: "MyFRITZ!"
         url: "https://fritz.box/myfritz"
+        target: "_blank"
       - name: "FRITZ!NAS"
         url: "https://fritz.box/nas"
+        target: "_blank"
       - name: "FRITZ!Smart Gateway"
         url: "http://fritz.smartgateway"
+        target: "_blank"
       - name: "Notfall-IP"
         url: "https://169.254.1.1"
+        target: "_blank"
       - name: "Paketmitschnitt"
         url: "http://fritz.box/html/capture.html"
+        target: "_blank"
   - name: "Kiosk"
     items:
       - name: "Dashboard"
         subtitle: "DietPi"
         url: "http://kiosk:5252"
+        target: "_blank"
   - name: "Raspi"
     items:
       - name: "Dashboard"
         subtitle: "RoPieee"
         url: "http://raspi/"
+        target: "_blank"
   - name: "Sonos"
     # https://github.com/florib779/Roon/blob/master/articles/roon-sonos.md
     # ToDo: Test links
@@ -91,57 +117,77 @@ services:
       #- name: "Advconfig"
       #  subtitle: "Set the root bridge (FirstZP and Priority to enabled)."
       #  url: "http://192.168.178.62:1400/advconfig.htm"
+      #  target: "_blank"
       - name: "Device description"
         url: "http://192.168.178.62:1400/xml/device_description.xml"
+        target: "_blank"
       - name: "Reboot"
         subtitle: "Reboot the Sonos box."
         url: "http://192.168.178.62/reboot"
+        target: "_blank"
       #- name: "Region"
       #  subtitle: "Set WLAN region (for Europe)."
       #  url: "http://192.168.178.62/region.htm"
+      #  target: "_blank"
       - name: "Status"
         url: "http://192.168.178.62:1400/status"
+        target: "_blank"
       - name: "Ifconfig"
         url: "http://192.168.178.62:1400/status/ifconfig"
+        target: "_blank"
       #- name: "Perf"
       #  url: "http://192.168.178.62:1400/status/perf"
+      #  target: "_blank"
       #- name: "Scanresults"
       #  subtitle: "Scanresults shows you all WLAN connections that were reached by Sonos."
       #  url: "http://192.168.178.62:1400/status/scanresults"
+      #  target: "_blank"
       #- name: "Topology"
       #  subtitle: "Shows the Sonos topology with all Sonos players and media servers."
       #  url: "http://192.168.178.62:1400/status/topology"
+      #  target: "_blank"
       #- name: "Tracks Summary"
       #  subtitle: "With this command you can display the number of tracks."
       #  url: "http://192.168.178.62:1400/status/tracks_summary"
+      #  target: "_blank"
       - name: "Direct Submit"
         subtitle: "This submits a diagnostic and then returns the code in a web page."
         url: "http://192.168.178.62:1400//support/directsubmit"
+        target: "_blank"
       - name: "Review"
         subtitle: "Overview of the Sonos Box. The network matrix can also be called up here."
         url: "http://192.168.178.62:1400/support/review"
+        target: "_blank"
       - name: "Tools"
         subtitle: "Network tools like ping, traceroute, nslookup."
         url: "http://192.168.178.62:1400/tools.htm"
+        target: "_blank"
       #- name: "WiFi Off until next reboot"
       #  subtitle: "Turns off the WIFI until the next reboot."
       #  url: "http://192.168.178.62:1400/wifictrl?wifi=off"
+      #  target: "_blank"
       #- name: "WiFi Off persistant"
       #  subtitle: "Turns off the WIFI interface completely. If you only want to work with network cable."
       #  url: "http://192.168.178.62:1400/wifictrl?wifi=persist-off"
+      #  target: "_blank"
   - name: "Musik-Download"
     # https://github.com/florib779/Roon/blob/master/articles/sources-for-downloadable-audio-files.md
     items:
       - name: "Qobuz"
         url: "https://www.qobuz.com/de-de/shop"
+        target: "_blank"
       - name: "Bandcamp"
         url: "https://bandcamp.com"
+        target: "_blank"
       - name: "7digital"
         url: "https://de.7digital.com"
+        target: "_blank"
       - name: "HIGHRESAUDIO"
         url: "https://www.highresaudio.com/de/site/index"
+        target: "_blank"
       - name: "Burning Shed"
         url: "https://burningshed.com"
+        target: "_blank"
   - name: "DietPi-Commands"
     # https://dietpi.com/docs/dietpi_tools
     items:
