--- a/assets/config.yml
+++ b/assets/config.yml
@@ -44,6 +44,9 @@ services:
       - name: "Valence"
         url: "https://valence.roonlabs.net/artdirector"
         target: "_blank"
+        - name: "Help Center"
+        url: "https://help.roonlabs.com"
+        target: "_blank"
       - name: "Translations"
         subtitle: "German"
         url: "https://translations.roonlabs.net/lang/german/all"
