--- a/assets/config.yml
+++ b/assets/config.yml
@@ -87,7 +87,8 @@ services:
         url: "https://fritz.box"
         target: "_blank"
       - name: "MyFRITZ!"
-        url: "https://fritz.box/myfritz"
+        #url: "https://fritz.box/myfritz"
+        url: "http://myfritz.box"
         target: "_blank"
       - name: "FRITZ!NAS"
         url: "https://fritz.box/nas"
