--- a/var/www/homer/assets/config.yml
+++ b/var/www/homer/assets/config.yml
@@ -85,6 +85,7 @@ services:
       - name: "Fritz!Box"
         subtitle: "FRITZ!OS"
         url: "https://fritz.box"
+        #url: "https://fritz.box?dbg=1"
         target: "_blank"
       - name: "MyFRITZ!"
         #url: "https://fritz.box/myfritz"
@@ -95,6 +96,7 @@ services:
         target: "_blank"
       - name: "FRITZ!Smart Gateway"
         url: "http://fritz.smartgateway"
+        #url: "http://fritz.smartgateway?dbg=1"
         target: "_blank"
       - name: "Emergency-IP"
         url: "https://169.254.1.1"
